--- a/backend/FwitterBackend/FwitterBackend/.gitignore
+++ b/backend/FwitterBackend/FwitterBackend/.gitignore
@@ -1,5 +1,6 @@
-FwitterBackend/HELP.md
+HELP.md
 target/
+tokens/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -32,7 +33,7 @@ build/
 ### VS Code ###
 .vscode/
 
-tokens/
+
 
 **/resources/*.json
 **/StoredCredential
