--- a/backend/FwitterBackend/FwitterBackend/pom.xml
+++ b/backend/FwitterBackend/FwitterBackend/pom.xml
@@ -48,6 +48,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.google.api-client</groupId>
 			<artifactId>google-api-client</artifactId>
 			<version>2.4.0</version>
