--- a/backend/FwitterBackend/FwitterBackend/src/main/resources/application.yml
+++ b/backend/FwitterBackend/FwitterBackend/src/main/resources/application.yml
@@ -14,3 +14,6 @@ spring:
       hibernate:
         format_sql: true
 
+rsa:
+  private-key: classpath:certs/private.pem
+  public-key: classpath:certs/public.pem
